fixed dropdown overflow out of screen

--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding-right: 6px;
+    cursor: pointer;
 }
 
 .dropdown-item-container .dropdown-item-title {
